launchersdir = $(pkgdatadir)/_Wood_/launchers

launchers_DATA = \
	01brasero.desktop\
	01file-launcher.desktop\
	01sound-juicer.desktop\
	01synaptic.desktop\
	01nautilus.desktop\
	01gnome-terminal.desktop\
	01thunderbird.desktop\
	01firefox.desktop\
	01pidgin.desktop\
	ekiga.desktop\
	gcalctool.desktop\
	gimp.desktop\
	ooo-calc.desktop\
	ooo-writer.desktop\
	vlc.desktop\
	ekiga.svg\
	firefox.svg\
	gimp.svg\
	pidgin.svg\
	vlc.svg\
	synaptic.svg\
	terminal.svg\
	file-browser.svg\
	mail-reader.svg\
	evolution.svg\
	nautilus.svg\
	konsole.svg\
	gnome-terminal.svg\
	thunar.svg\
	pcmanfm.svg\
	konqueror.svg\
	kmail.svg\
	mozilla-thunderbird.svg\
	xfce4-terminal.svg\
	cd-burner.svg\
	nautilus-cd-burner.svg\
	graveman.svg\
	gnome-baker.svg\
	k3b.svg\
	brasero.svg
	
	
	
	
