launchersdir = $(pkgdatadir)/_Wood_/launchers

launchers_DATA = \
	01brasero.desktop\
	01sound-juicer.desktop\
	01synaptic.desktop\
	01nautilus.desktop\
	01gnome-terminal.desktop\
	01thunderbird.desktop\
	01firefox.desktop\
	01pidgin.desktop\
	ekiga.desktop\
	gcalctool.desktop\
	gimp.desktop\
	ooo-calc.desktop\
	ooo-writer.desktop\
	vlc.desktop

EXTRA_DIST = $(launchers_DATA)

