launchersdir = $(pkgdatadir)/themes/_default_/launchers

launchers_DATA = \
	01BitTorrent.desktop\
	01bmp.desktop\
	01firefox.desktop\
	01gnome-terminal.desktop\
	01nautilus.desktop\
	01thunderbird.desktop\
	bmp.svg\
	nautilus.svg\
	mozilla-thunderbird.svg\
	transmission.png\
	web-browser.svg\
	terminal.svg\
	logout.svg\
	firefox.svg\
	opera.svg\
	epiphany.svg\
	konsole.svg\
	gnome-terminal.svg\
	xfce4-terminal.svg

EXTRA_DIST = $(launchers_DATA)

