themedir = $(pkgdatadir)/themes/Chilperik

theme_DATA = \
	cairo-dock.conf \
	separateur.svg \
	00launcher.desktop\
	bmp.desktop \
	nautilus.svg \
	pidgin.svg \
	01launcher.desktop \
	bmp.svg \
	net.svg \
	plug-in \
	02fichiers.desktop \
	ooc.svg \
	03terminal.desktop \
	console.svg \
	ooo-calc.desktop \
	torrent.svg \
	04launcher.desktop \
	firefox.desktop \
	ooo.svg \
	totem.desktop \
	amule.desktop \
	firefox.svg \
	ooo-writer.desktop \
	totem.svg \
	amule.svg \
	oow.svg \
	transmission-gtk.desktop \
	background-cairo-dock.svg \
	mv.svg \
	pidgin.desktop
	