themedir = $(pkgdatadir)/themes/Djoole

theme_DATA = \
	00launcher.desktop \
	01BitTorrent.desktop \
	01gaim.desktop \
	02fichiers.desktop \
	03terminal.desktop \
	04thunderbid.desktop \
	05firefox.desktop \
	06musique.desktop \
	07synaptic.desktop \
	08launcher.desktop \
	09launcher.desktop \
	10launcher.desktop \
	background-cairo-dock.svg \
	background-snow.svg \
	cairo-dock.conf \
	calculator.svg \
	desktop.svg \
	firefox.svg \
	gnome.svg \
	grisbi.png \
	home.svg \
	internet-folder.svg \
	internet.svg \
	mail.svg \
	music.svg \
	nautilus.svg \
	separateur.svg \
	ShowDesktop \
	synaptic.svg \
	terminal.svg \
	thunderbird.svg \
	transmission.png \
	Tux.svg \
	web.svg
