themedir = $(pkgdatadir)/themes/Fabounet

theme_DATA = \
	cairo-dock.conf\
	01BitTorrent.desktop\
	07firefox.desktop\
	music.svg\
	02fichiers.desktop\
	background-cairo-dock.svg\
	nautilus.svg\
	03terminal.desktop\
	separateur.svg\
	04thunderbid.desktop\
	thunderbird.svg\
	05web.desktop\
	firefox.svg\
	transmission.png\
	06musique.desktop\
	Tux.svg
