themedir = $(pkgdatadir)/themes/Fabounet

theme_DATA = \
	cairo-dock.conf\
	readme\
	background-cairo-dock.svg\
	separateur.svg\
	01BitTorrent.desktop\
	transmission.png\
	02fichiers.desktop\
	nautilus.svg\
	03terminal.desktop\
	Tux.svg\
	06musique.desktop\
	music.svg\
	05web.desktop\
	web-browser.svg\
	04thunderbid.desktop\
	thunderbird.svg\
	07firefox.desktop\
	firefox.svg\
	08gaim.desktop\
	gaim.svg\
	09system.desktop\
	gnome-main-menu.svg\
	10synaptic.desktop\
	synaptic.png\
	11gnome-system-monitor.desktop\
	utilities-system-monitor.svg\
	12beryl-settings.desktop\
	beryl-settings.svg
